@@ -27,12 +27,10 @@
 #import "ZipArchive.h"
 #import "LhaArchive.h"
 #import "SevenZipArchive.h"
+#import "common.h"
 
 @interface ArchiveService (PrivateAPI)
-- (void)createLhaArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
-- (void)createTarArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
-- (void)createZipArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
-- (void)create7zArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
+- (void)createArchiveForFiles:(NSArray *)filenames archiveType: (ArchiveType) archiveType;
 @end
 
 @implementation ArchiveService : NSObject
@@ -57,7 +55,7 @@
 		return;
 	}
 	
-	[self create7zArchiveForFiles:filenames archiveType:nil];
+	[self createArchiveForFiles:filenames archiveType:SEVENZIP];
 }
 
 - (void)createLhaArchive:(NSPasteboard *)pboard userData:(NSString *)userData
@@ -80,7 +78,7 @@
 		return;
 	}
 	
-	[self createLhaArchiveForFiles:filenames archiveType:nil];
+	[self createArchiveForFiles:filenames archiveType:LHA];
 }
 
 - (void)createZipArchive:(NSPasteboard *)pboard userData:(NSString *)userData
@@ -103,7 +101,7 @@
 		return;
 	}
 	
-	[self createZipArchiveForFiles:filenames archiveType:nil];
+	[self createArchiveForFiles:filenames archiveType:ZIP];
 }
 
 - (void)createZippedTarArchive:(NSPasteboard *)pboard userData:(NSString *)userData
@@ -126,7 +124,7 @@
 		return;
 	}
 	
-	[self createTarArchiveForFiles:filenames archiveType:@"TarGZ"];
+	[self createArchiveForFiles:filenames archiveType:TARGZ];
 }
 - (void)createBZippedTarArchive:(NSPasteboard *)pboard userData:(NSString *)userData
 	error:(NSString **)error;
@@ -148,10 +146,12 @@
 		return;
 	}
 	
-	[self createTarArchiveForFiles:filenames archiveType:@"TarBZ2"];
+	[self createArchiveForFiles:filenames archiveType:TARBZ2];
 }
+@end
 
-- (void)createTarArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
+@implementation ArchiveService (PrivateAPI)
+- (void)createArchiveForFiles:(NSArray *)filenames archiveType: (ArchiveType) archiveType;
 {
 	int rc;
 	
@@ -162,51 +162,26 @@
 	  {
 	    NSString *archiveFile = [panel filename];
 	    // create the archive
-	    [TarArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
-	  }
-}
-
-- (void)createZipArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
-{
-	int rc;
-	
-	NSSavePanel *panel = [NSSavePanel savePanel];
-	[panel setTitle:@"Archive destination"];
-	rc = [panel runModalForDirectory:NSHomeDirectory() file:nil];
-	if (rc == NSOKButton)
-	  {
-	     NSString *archiveFile = [panel filename];
-	     // create the archive
-	     [ZipArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
-	  }
-}
-
-- (void)createLhaArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
-{
-	int rc;
-	
-	NSSavePanel *panel = [NSSavePanel savePanel];
-	[panel setTitle:@"Archive destination"];
-	rc = [panel runModalForDirectory:NSHomeDirectory() file:nil];
-	if (rc == NSOKButton)
-	  {
-	     NSString *archiveFile = [panel filename];
-	     // create the archive
-	     [LhaArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
-	  }
-}
-- (void)create7zArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
-{
-	int rc;
-	
-	NSSavePanel *panel = [NSSavePanel savePanel];
-	[panel setTitle:@"Archive destination"];
-	rc = [panel runModalForDirectory:NSHomeDirectory() file:nil];
-	if (rc == NSOKButton)
-	  {
-	     NSString *archiveFile = [panel filename];
-	     // create the archive
-	     [SevenZipArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
+	    switch (archiveType)
+	      {
+		case TAR:
+		case TARGZ:
+		case TARBZ2:
+		case TARXZ:
+	    	  [TarArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
+		  break;
+		case LHA:
+	     	  [LhaArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
+		  break;
+		case ZIP:
+	          [ZipArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
+		  break;
+		case SEVENZIP:
+	          [SevenZipArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
+		  break;
+		default:
+		  NSLog(@"Archive type %d not supported for archive creation", archiveType);
+	      }
 	  }
 }
 @end
