@@ -8,5 +8,5 @@
 - (int)expandFiles:(NSArray *)files withPathInfo:(BOOL)usePathInfo toPath:(NSString *)path;
 - (NSArray *)listContents;
 
-+ (void)createArchive:(NSString *)archivePath withFiles:(NSArray *)filenames archiveType:(NSString *) archiveType;
++ (void)createArchive:(NSString *)archivePath withFiles:(NSArray *)filenames archiveType:(ArchiveType) archiveType;
 @end
