@@ -1,3 +1,8 @@
+2012-12-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* *Archive.m Archive.[h|m], new common.h, *Archive.[h|m],
+	  ArchiveService.[h|m], define and use typedef enum 
+	  ArchiveType for the different archive types.
+
 2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* ZipArchive.m remove a bogus check, and fix comment
 	* ArchiveService.[h|m], ZipperInfo.plist, LhaArchive.[h|m]
